--- a/Prac 06/mile_to_km.kv
+++ b/Prac 06/mile_to_km.kv
@@ -1,29 +1,38 @@
+<Widget>:
+    canvas.before:
+        Color:
+            rgba: 1, 1, 1, 1
+        Rectangle:
+            pos: self.pos
+            size: self.size
+    canvas.after:
+        Color:
+            rgba: 0, 0, 0, 1
+
 BoxLayout:
     orientation: 'vertical'
     BoxLayout:
         orientation: 'horizontal'
         TextInput:
-            id: input_number
-            text: '7'
+            id: input_miles
+            text: '34'
             font_size: 48
-            multiline: False
+            on_text: app.handle_calculate()
         BoxLayout:
             orientation: 'vertical'
+            size_hint_x: 0.25
             Button:
-                text: 'up'
-                # the following line specifies the function in the app class to call when the button is pressed
-                on_press: app.addone(int(input_number.text))
+                text: 'Change'
+                on_press: app.changeTheme()
+
             Button:
-                text: 'down'
-                # the following line specifies the function in the app class to call when the button is pressed
-                on_press: app.takeone(int(input_number.text))
-    BoxLayout:
-        Button:
-            text: 'Covert m to km'
-            # the following line specifies the function in the app class to call when the button is pressed
-            on_press: app.handle_calculate(int(input_number.text))
-    BoxLayout:
-        Label:
-            id: output_label
-            font_size: 48
-            color: (1, 1, 0, 1)
+                text: 'Up'
+                on_press: app.handle_increment(1)
+            Button:
+                text: 'Down'
+                on_press: app.handle_increment(-1)
+    Label:
+        id: output_label
+        font_size: 48
+        text: '54.717'
+color: (1, 1, 0, 1)
